examples/host_regex_rewrite/envoy.yaml
static_resources:
  listeners:
    - name: main
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 18000
      filter_chains:
        - filters:
            - name: envoy.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                codec_type: auto
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: "/"
                          route:
                            cluster: local-service
                          typed_per_filter_config:
                            envoy.filters.http.wasm:
                              "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                              config:
                                name: "my_plugin"
                                root_id: "my_root_id"
                                vm_config:
                                  vm_id: "my_vm_id"
                                  runtime: "envoy.wasm.runtime.wasmtime"
                                  code:
                                    local:
                                      filename: "./examples/host_regex_rewrite/main.go.wasm"
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config: {}

  clusters:
    - name: local-service
      connect_timeout: 0.25s
      type: STATIC
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: local-service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: 127.0.0.1
                      port_value: 8000

admin:
  access_log_path: "/dev/null"
  address:
    socket_address:
      address: 0.0.0.0
      port_value: 8001
